<resources>
    <string name="app_name">Todos</string>
    <string name="partial_app_name_1">Todos</string>
    <string name="app_name_partial_2">App</string>
    <string name="start">Start</string>
    <string name="login_tab">LOGIN</string>
    <string name="signup_tab">SIGN-UP</string>
    <string name="login">GO!</string>
    <string name="signup">GET STARTED!</string>
    <string name="email">Email</string>
    <string name="hint_email">example@gmail.com</string>
    <string name="username">Username</string>
    <string name="hint_username">username1234</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hint_password">********</string>
    <string name="add_symbol">+</string>
    <string name="add_todo">Add Todo</string>
    <string name="add_text">Add</string>
    <string name="edit_todo">Edit Todo</string>
    <string name="edit_text">Edit</string>
    <string name="delete_text">Delete</string>
    <string name="cancel_text">Cancel</string>
    <string name="important">Important?</string>
    <string name="hint_todo_name">Enter todo name here</string>
    <string name="hint_edit_todo_name">Edit todo name here</string>
    <string name="add_item">Add Item</string>
    <string name="edit_item">Edit Item</string>
    <string name="hint_item_name">Enter item name here</string>
    <string name="hint_edit_item_name">Edit item name here</string>
    <string name="done">Done?</string>
</resources>
