<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <Button
            android:text="@string/login_tab"
            android:textSize="10pt"
            android:typeface="serif"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="200dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="5dp" />

        <Button
            android:text="@string/signup_tab"
            android:textSize="10pt"
            android:typeface="serif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="200dp"
            android:onClick="onSignUpTabClick" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textview_login_email"
        android:text="@string/email"
        android:textSize="12pt"
        android:typeface="serif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="175dp" />

    <EditText
        android:id="@+id/edittext_login_email"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email"
        android:textSize="10pt"
        android:typeface="serif"
        android:imeOptions="actionNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@id/textview_login_email" />

    <TextView
        android:id="@+id/textview_login_password"
        android:text="@string/password"
        android:textSize="12pt"
        android:typeface="serif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_below="@id/edittext_login_email" />

    <EditText
        android:id="@+id/edittext_login_password"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:textSize="10pt"
        android:typeface="serif"
        android:imeOptions="actionDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@id/textview_login_password" />

    <Button
        android:text="@string/login"
        android:textSize="12pt"
        android:typeface="serif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:layout_marginLeft="125dp"
        android:layout_marginRight="125dp"
        android:layout_below="@id/edittext_login_password"
        android:onClick="onLoginClick" />
</RelativeLayout>
