<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_edit_todo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/textview_edit_todo"
        android:text="@string/edit_todo"
        android:textSize="18pt"
        android:typeface="serif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/edittext_edit_todo_name"
        android:inputType="textLongMessage"
        android:hint="@string/hint_edit_todo_name"
        android:textSize="12pt"
        android:typeface="serif"
        android:imeOptions="actionDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="100dp"
        android:layout_below="@id/textview_edit_todo" />

    <CheckBox
        android:id="@+id/checkbox_edit_todo_important"
        android:text="@string/important"
        android:textSize="10pt"
        android:typeface="serif"
        android:layoutDirection="rtl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/edittext_edit_todo_name" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_below="@id/edittext_edit_todo_name">

        <Button
            android:text="@string/edit_text"
            android:textSize="10pt"
            android:typeface="serif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="225dp"
            android:layout_marginLeft="25dp"
            android:onClick="onEditTodoClick" />

        <Button
            android:text="@string/delete_text"
            android:textSize="10pt"
            android:typeface="serif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="225dp"
            android:onClick="onDeleteTodoClick" />
    </RelativeLayout>
</RelativeLayout>
